css/style.production.css
:root {
  /*body */
  /* h1*/
  /* background color*/
  /* a, button(background-color) */
  /* a:visited */
  /* button secondary background color*/
  /* 0% */
  /* 50% */
  /* background for the 6 projects on work page*/
}

/* tYPOGRAFHY STYLING */
:root {
  /* h1 */
  /* h2 */
  /* h3 */
  /* body */
  /* body*/
  /* h1, h2, h3*/
  /* body*/
}

/* Here above, it is how a variable is creat on css */

body {
  font-family: 'Open+Sans', sans-serif;
  /*This is typography, we added font from google and should alwas be at the top of the CSS file*/
  font-weight: 400;
  font-size: 16px;
  /* Sets the font size to 16px */
  line-height: 1.6;
  /* Sets the line-height 1.6 */
  background-color: #fdba74;
}

h1 {
  font-size: 30px;
  font-weight: 700;
  color: #2b2b2b
}

h2 {
  font-size: 24px;
  font-weight: 700;
  color: #2b2b2b;
}

h3 {
  font-size: 18px;
  font-weight: 700;
}

p,
ul,
.contact-info {
  color: #383838;
}


a {
  color: #446A46;
  /* I changed the color, recommended by totaly "the sun glasses" */
}

a:visited {
  color: #05676e;
  /* Visited link */
}

a:hover,
a:focus {
  text-decoration: none;
  /* No underlining when hovering over a link */
  /* "a:hover" must come after "a:visited" in order to be effective. */
}

a:active {
  color: #446A46
    /* selected link, will turn to this color when is clicked */
    /* "a:active" must come after "a:hover" in order to work.*/
}

#my-link {
  color: #2d5e30;
}

input,
texture,
select,
button {
  font-family: system-ui;
}

/* his means that those elements listed will use the default system font. 
The explicit mention of these four elements holds more weight than the rule i implemented specifying Open+Sanf as my body font.*/

.button {
  /*Defines all "buttons"general styling */
  border: none;
  /*overwrites browser defaults and resets the boarder*/
  display: inline-block;
  font-family: inherit;
  /* takes the font from the outer container (body) */
  background-color: #357b70;
  color: whitesmoke;
  text-decoration: none;
  /* Styles the background color, font color, and text decoration (underline, etc) of the button */
  padding: 10px;
  border-radius: 3px;
  /* adds spacing to the button*/
  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
  /*gives the button a bottom border with a width of 2px, a type od solid and a color in RGBA format*/
  -webkit-transition: 0.2s opacity;
  -o-transition: 0.2s opacity;
  transition: 0.2s opacity;
}

button {
  /*Defines all "buttons"general styling */
  border: none;
  /*overwrites browser defaults and resets the boarder*/
  display: inline-block;
  font-family: inherit;
  /* takes the font from the outer container (body) */
  background-color: #357b70;
  color: whitesmoke;
  text-decoration: none;
  /* Styles the background color, font color, and text decoration (underline, etc) of the button */
  padding: 10px;
  border-radius: 3px;
  /* adds spacing to the button*/
  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
  /*gives the button a bottom border with a width of 2px, a type od solid and a color in RGBA format*/
  -webkit-transition: 0.2s opacity;
  -o-transition: 0.2s opacity;
  transition: 0.2s opacity;
}

#cv-button {
  background-color: #557c55;
  color: #f9f9f9;
  text-decoration: none;
  margin-top: 25px;
  padding: 10px;
  border-radius: 3px;
  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
  -webkit-transition: 0.3s opacity;
  -o-transition: 0.3s opacity;
  transition: 0.3s opacity;
}

#cv-button:hover {
  background-color: #A6CF98;
  color: #383838;
  opacity: 0, 8;
}

/*-webkit-transition: [transition-property] [transition-duration] [transition-timimg-function] [transition-delay];

-o-transition: [transition-property] [transition-duration] [transition-timimg-function] [transition-delay];

transition: [transition-property] [transition-duration] [transition-timimg-function] [transition-delay];
*/

button:hover,
button:focus,
.button:hover,
.button:focus {
  cursor: pointer;
  /* let´s the  mouse appear as a hand when hovering over the button */
  opacity: 0, 8;
  /* Reduces the opacity of the button to 80% */
}

.button_secondary {
  background-color: #e0b354;
  color: #2b2b2b;
  /* because of the cascading behavior of CSS, the sepecific changes here will overwrite those from the original styling */
}

.nav-list {
  text-transform: uppercase;
}

.item-nav {
  opacity: 0.8;
}

.item-nav:hover {
  opacity: 1;
}

.profile {
  max-width: 700px;
  /* the max-width: 700px; declaration will keep this “box” from exceeding 700px. */
  margin: 2rem auto;
  /* your profile “box” is now centered on the page. This was thanks to the margin: 0 auto; */
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.profile_portrait {
  float: left;
  width: 250px;
  height: 250px;
  margin-right: 40px;
  border-radius: 50%;
  -o-object-fit: cover;
  object-fit: cover;
  box-shadow: 0.3rem 0.3rem 0.5rem #777;
}

/*.profile_text {
    ###
}
*/

/*
===================================================================
Here below, i added the code to place the footer at the bottom of the page
===================================================================
*/

#page-container {
  position: relative;
  min-height: 100vh;
  background-color: #fdba74;
}

#content-wrap {
  padding-bottom: 2.0rem;
  /* Footer height */
}

/*
===================================================================
Here above, i added the code to place the footer at the bottom of the page
===================================================================
*/

.work,
.contact-title {
  text-transform: uppercase;
}

.about-text {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;
  margin: 2rem auto;
}

.about-title {
  text-align: center;
}

.about-information-ttitle {
  text-align: center;
}

.about-box {
  max-width: 850px;
  display: flex;
  gap: 70px;
  margin: 2rem auto 1rem auto;
}

.tell {
  width: 70%;
}

.hobbies {
  width: 50%;
}

.hobbies-list {
  list-style-type: none;
  /* It get rid of the dots */
  padding: 1px;
}

.svg-section {
  max-width: 75%;
  margin: 0 auto;
}

.about-information {
  max-width: 800px;
  margin: 2rem auto;
  display: flex;
}

.about-skills {
  text-align: center;
  margin-bottom: 10rem;
}

.skill-items {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  list-style-type: none;
  margin: 1rem auto;
}

.skill-items li {
  margin: 10px;
  color: #383838;
  background-color: #F5F5F5;
  opacity: 0.8;
  border: .1rem solid #383838;
  padding: .2rem .5rem;
}

.skill-items li:hover {
  opacity: 1;
  transition: 0.5s;
}

.contact-section {
  display: flex;
  flex-direction: column;
  text-align: center;
  align-items: center;
  margin: 2rem auto;
}

.page-footer {
  position: absolute;
  width: 100%;
  bottom: 0;
  padding-bottom: 2rem;
  clear: both;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.page-footer a {
  text-decoration: none;
}

main {
  padding: 20px;
}

.redes_profile {
  width: 30px
}

* {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  /* this method is recommended, the actual width of your 124px container mentioned above would change to 100px (even including the 20px padding and 4px borders).*/
}

.sun {
  -webkit-animation-duration: 4s;
  animation-duration: 4s;
  -webkit-animation-name: color-change;
  animation-name: color-change;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
  -webkit-animation-timing-function: linear;
  animation-timing-function: linear;
}

.section-project {
  margin: 2rem auto 10rem auto;
}

@-webkit-keyframes color-change {
  0% {
    fill: #edc655
  }

  50% {
    fill: #fcffad
  }

  100% {
    fill: #f76414
  }

}

@keyframes color-change {
  0% {
    fill: #edc655
  }

  50% {
    fill: #fcffad
  }

  100% {
    fill: #f76414
  }

}

@supports (display: grid) {
  .grid {
    display: -ms-grid;
    display: grid;
    -ms-grid-columns: 1fr 20px 1fr 20px 1fr 20px 1fr;
    grid-template-columns: repeat(3, 1fr);

    /*grid-template-rows: 300px 300px;*/
    /* Thankfully, CSS grid helps out here by setting a default auto value for both properties, 
    meaning that it will automatically create as many rows or columns necessary to create a grid of the designated size.
    It’s considered good practice to specify only one property, and this property is usually the columns property. 
    This means the rows property defaults to auto, and that the grid should still work even if the row with the property grid-template-rows is deleted:*/

    grid-gap: 20px;
    /* This function does not work (grid-gap:) instead they recomend (gap property), but works... */
    margin: 2rem auto;
    max-width: 1100px;
  }

  .grid_item {
    display: grid;
    align-content: space-between;
    background-color: #d3d3d3;
    width: auto;
    min-height: auto;
    margin: 0;
    padding: 10px;
    border-radius: 5%;
    box-shadow: 0.3rem 0.3rem 0.5rem #777;
  }

  .grid-img {
    box-shadow: 0.1rem 0.1rem 0.3rem #777;
  }

  .grid_a {
    color: #3b653d;
    display: flex;
    justify-content: space-around;
  }

  .grid-icons {
    font-size: 30px;
  }
}

/* The @supports CSS at-rule lets you specify declarations that depend on a browser's 
support for one or more specific CSS features. This is called a feature query. */


@media all and (max-width: 500px) {
  .grid {
    -ms-grid-columns: 1fr;
    grid-template-columns: 1fr;
  }

  .about-box {
    display: flex;
    flex-direction: column;
  }

  .tell {
    margin: auto;
  }

  .hobbies {
    margin: auto;
  }

  .about-information {
    margin: 0 1rem;
  }

  .about-skills {
    margin: 0 1rem;
  }
}

@media all and (min-width: 500px) and (max-width: 750px) {
  .grid {
    -ms-grid-columns: 1fr 20px 1fr;
    grid-template-columns: 1fr 1fr;
  }
}

@media all and (max-width: 750px) {
  .grid {
    grid-gap: 10px;
  }

  .grid_item:last-child {
    grid-column: auto / auto;
    grid-row: auto / auto;
  }

  h1 {
    font-size: 22px;
  }

  .about-box {
    display: flex;
    flex-direction: column;
  }

  .tell {
    margin: auto;
  }

  .hobbies {
    margin: auto;
  }

  .about-information {
    margin: 0 1rem;
  }

  .about-skills {
    margin: 0 1rem;
  }
}

@media (max-width: 550px) {
  .profile {
    display: flex;
    flex-direction: column;
    margin: 2rem auto;
  }

  .profile_text {
    margin: 2rem auto;
    text-align: center;
  }
}

